# oncall

./: Dockerfile  docker-compose.yml  pyproject.toml
oncall/: Dockerfile  db.sqlite3  manage.py
oncall/oncall/: asgi.py  settings.py  urls.py  wsgi.py
oncall/schedules/: api.py  models.py
oncall/schedules/migrations/: 0001_initial.py  0002_rotation_rotationschedule_rotation_schedules.py  0003_rotation_team_alter_rotation_description.py  0004_alter_rotationschedule_end_date.py
oncall/users/: api.py  models.py
oncall/users/migrations/: 0001_initial.py
schedules/: admin.py  models.py
users/: admin.py  api.py  models.py
users/migrations/: 0002_profile_user.py
